--- a/src/ServiceCard.css
+++ b/src/ServiceCard.css
@@ -5,33 +5,14 @@
   align-items: center;
   width: 300px;
   height: 500px;
-  margin: 20px;
-  padding: 10px;
   transition: transform 100ms ease-in;
 }
 
 .serviceCard__title {
-  display: flex;
-  align-items: center;
-  width: 100%;
-}
-
-.serviceCard__title .MuiSvgIcon-root {
-  color: green;
-}
-
-.title__title {
-  color: darkgreen;
-  opacity: 0.85;
-  flex: 0.9;
-  display: flex;
-  justify-content: center;
-  text-shadow: 1px 1px 2px black;
-}
-
-.serviceCard__img {
-  display: flex;
-  flex-wrap: wrap;
+  text-align: center;
+  color: #2c455d;
+  opacity: 0.8;
+  text-shadow: 1px 1px 2px lightgray;
 }
 
 .serviceCard__img img {
@@ -42,18 +23,11 @@
   object-fit: contain;
 }
 
-.serviceCard__details {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: white;
-}
-
 .serviceCard__details p {
   font-size: 15px;
-  opacity: 0.7;
-  color: #2c455d;
-  text-shadow: 1px 1px 2px black;
+  opacity: 0.8;
+  color: dodgerblue;
+  text-shadow: 1px 1px 2px lightgray;
 }
 
 .serviceCard:hover {
