--- a/src/Info.css
+++ b/src/Info.css
@@ -66,3 +66,9 @@ h2 {
 .info__goals {
   padding-right: 50px;
 }
+
+.info__officers {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
