--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -6,7 +6,7 @@
   width: 100%;
   color: white;
   opacity: 0.9;
-  padding-top: 100px;
+  padding-top: 70px;
   text-shadow: 1px 1px 2px black;
   background-color: dodgerblue;
   /* background-position: center center;
@@ -20,6 +20,7 @@
   align-items: center;
   text-align: center;
   height: 80vh;
+  width: 80%;
 }
 
 .home h1 {
@@ -27,7 +28,7 @@
 }
 
 .home p {
-  font-size: 15px;
+  font-size: 12px;
 }
 
 .home__downIcon .MuiSvgIcon-root {
