--- a/src/Info/Officers.css
+++ b/src/Info/Officers.css
@@ -11,7 +11,7 @@
   box-shadow: 0 3px 10px black;
   margin: 6px;
   border-radius: 20px;
-  border: 1px solid #2c455d;
+  /* border: 1px solid #2c455d; */
 }
 
 .officers img {
