--- a/src/About/About.css
+++ b/src/About/About.css
@@ -1,10 +1,19 @@
 .about {
-  height: 500vh;
+  height: 600vh;
   justify-content: flex-start;
 }
 .geninfo,
-.services {
+.services,
+.officers {
   text-align: center;
+}
+
+.officers__group {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  border: 1px dashed rgb(190, 234, 240);
+  margin-bottom: 10px;
 }
 
 .geninfo__details {
@@ -19,115 +28,11 @@
 
 .services__cards {
   display: flex;
-  /* flex-direction: column; */
   align-items: center;
   flex-wrap: wrap;
 }
 
-/* .geninfo .geninfo__title {
-  text-align: right;
-  color: darkblue;
-  width: 30%;
-  border: 1px solid red;
+.goals,
+.purposes {
+  padding-left: 30px;
 }
-
-.geninfo .geninfo__desc {
-  text-align: right;
-  color: darkblue;
-  width: 30%;
-  border: 1px solid green;
-} */
-
-/* .geninfo span {
-  color: #2c455d;
-} */
-
-/* .about__pic > img {
-  border-radius: 20px;
-  padding: 0;
-  height: 250x;
-  width: 150px;
-}
-
-.about__rtc {
-  color: dodgerblue;
-  font-weight: 600;
-}
-
-.about__details,
-.about__contacts {
-  width: 85%;
-}
-
-.about__details {
-  text-align: justify;
-}
-
-.about h2 {
-  font-size: 20px;
-  font-weight: 400;
-  margin-top: 10px;
-}
-
-.about p {
-  font-size: 15px;
-  opacity: 0.9;
-  margin: 7px;
-}
-
-.about__contacts {
-  padding: 0;
-  margin: 0;
-}
-
-.contacts__icon {
-  display: flex;
-  align-items: center;
-  padding-left: 10px;
-  padding-top: 0;
-  padding-bottom: 0;
-  margin: 0;
-}
-
-.contacts__icon .MuiSvgIcon-root {
-  color: lightblue;
-  margin-right: 10px;
-}
-
-.contacts__socialmedia {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-
-.contacts__socialmedia .MuiSvgIcon-root {
-  color: dodgerblue;
-} */
-/* 
-.about__downIcon {
-  position: relative;
-  bottom: 50px;
-}
-
-.about__downIcon .MuiSvgIcon-root {
-  color: white !important;
-}
-
-.about__fadeBottom {
-  width: 100%;
-  height: 7.4rem;
-  background-image: linear-gradient(
-    180deg,
-    transparent,
-    rgba(37, 37, 37, 0.61),
-  );
-}
-
-.about__details .MuiSvgIcon-root {
-  color: dodgerblue;
-}
-
-.about__details .MuiSvgIcon-root:hover {
-  color: lightgreen;
-  transform: scale(1.2);
-} */
