--- a/src/About/OfficerCard.css
+++ b/src/About/OfficerCard.css
@@ -1,44 +1,43 @@
-.officers {
+.officerCard {
   display: flex;
   justify-content: center;
 }
-.officers__container {
+
+.officerCard__container {
   display: flex;
   flex-direction: column;
   width: 130px;
   align-items: center;
   background-color: white;
-  box-shadow: 0 3px 10px black;
   margin: 6px;
   border-radius: 20px;
-  /* border: 1px solid #2c455d; */
+  border: 1px solid lightgray;
 }
 
-.officers img {
+.officerCard img {
   height: 80px;
   width: 80px;
 }
 
-.officers__name {
-  color: blue;
+.officerCard__name {
+  color: dodgerblue;
 }
 
-.officers__position {
-  color: brown;
+.officerCard__position {
+  color: darkcyan;
 }
 
-.officers__group {
-  color: darkblue;
+.officerCard__group {
+  color: #2c455d;
 }
 
-.officers__name,
-.officers__position,
-.officers__group {
+.officerCard__name,
+.officerCard__position,
+.officerCard__group {
   font-size: 11px;
-  text-shadow: 1px 1px 1px gray;
 }
 
-.officers__details {
+.officerCard__details {
   display: flex;
   flex-direction: column;
   align-items: center;
