--- a/src/About/ServiceCard.css
+++ b/src/About/ServiceCard.css
@@ -3,11 +3,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 180px;
-  height: 200px;
+  width: 150px;
+  height: 210px;
   border: 1px dashed rgb(190, 234, 240);
-  margin: 5px;
-  padding: 5px;
+  margin: 2px;
+  padding: 5px 1px;
 }
 
 .serviceCard__title {
@@ -18,6 +18,7 @@
 
 .serviceCard__title h2 {
   font-size: 15px;
+  margin: 5px 0;
 }
 
 .serviceCard__img img {
