--- a/src/Login/Avatar.css
+++ b/src/Login/Avatar.css
@@ -1,19 +1,32 @@
-.imageupload{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width:100%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    background-color: white;
-    border-top: 1px solid lightgray;
-    padding: 10px;
-    /* background: linear-gradient(145deg, white,dodgerblue); */
+.avatar {
+  width: 100%;
+  height: 100vh;
+  background-color: white;
+  display: flex;
+  justify-content: center;
 }
 
-.imageupload__progress{
-    width: 100%;
+.avatar__progress {
+  width: 100%;
 }
 
+.avatar__details {
+  border: 1px dashed crimson;
+  width: 60%;
+  height: 25%;
+  margin: 30px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.avatar__details h2 {
+  color: dodgerblue;
+  margin-bottom: 30px;
+}
+
+.MuiFormControl-root .MuiInputBase-input,
+.MuiFormControl-root .MuiInput-input {
+  color: #2c455d !important;
+}
